# lancelot

./: .gitignore  .vim-template:cpp  .vim-template:h  .vim-template:qml  CMakeLists.txt  README
cmake/modules/: FindZMQ.cmake
contrib/zmq-utils/: zmq-publisher-test.py  zmq-subscriber-test.py
docs/: design
src/: CMakeLists.txt
src/blade/: CMakeLists.txt  ControllerMessage.cpp  ControllerMessage.h  Protocol.cpp  Protocol.h  blade-features.h.cmake  main.cpp  protocol.cpp  protocol.h
src/blade/runners/: AbstractRunner.cpp  AbstractRunner.h  CMakeLists.txt  Design.md  FuzzyBool.h  Result.cpp  Result.h  ResultModel.cpp  ResultModel.h  blade_runner_plugin.desktop
src/blade/runners/plugins/: CMakeLists.txt
src/blade/runners/plugins/activities/: ActivitiesRunner.cpp  ActivitiesRunner.h  CMakeLists.txt  blade-plugin-activities.json
src/blade/runners/plugins/baloo/: BalooRunner.cpp  BalooRunner.h  CMakeLists.txt  blade-plugin-baloo.json
src/blade/runners/plugins/recoll/: CMakeLists.txt  RecollRunner.cpp  RecollRunner.h  blade-plugin-recoll.json
src/blade/runners/plugins/services/: CMakeLists.txt  ServicesRunner.cpp  ServicesRunner.h  blade-plugin-services.json
src/blade/transport/: ControllerMessage.cpp  ControllerMessage.h  Serialization.cpp  Serialization.h
src/blade/transport/protocol/: controller_message.capnp  error_message.capnp  ping_message.capnp  query_message.capnp
src/blade/ui/: UiBackend.cpp  UiBackend.h  window.qml  window.qmlc
src/tests/voy/: CMakeLists.txt  tests_multiprocess.cpp  tests_simple.cpp  tests_thread.cpp
src/utils/: bind_front.h  constructor_fn.h  debug.h  overloaded.h  qstringliterals.h
src/voy/: CMakeLists.txt  dsl.h  main.cpp  tests_multiprocess.cpp  tests_simple.cpp  traits.h  utils.h
src/voy/basic/: delayed.h  sink.h  values.h
src/voy/dsl/: multiprocess.h  node_tags.h  node_traits.h
src/voy/engine/: event_loop.h
src/voy/engine/asio/: process.h  service.cpp  service.h
src/voy/engine/asio/tcp/: service.h
src/voy/operations/: debounce.h  filter.h  identity.h  merge.h  slice.h  transform.h
src/voy/wrappers/: process.h  tcp_service.h  zmq_service.h
src/voy/wrappers/qt/: connect.h
